--- a/smoke/Dockerfile.jenkins
+++ b/smoke/Dockerfile.jenkins
@@ -3,8 +3,7 @@ FROM jenkins/jenkins:$$jenkins-version$$
 WORKDIR /var/jenkins_home
 
 ENV JAVA_OPTS="-Djenkins.install.runSetupWizard=false" \
-    PLUGIN_DIR=/usr/share/jenkins/ref/plugins
-
+    PLUGIN_DIR=/usr/share/jenkins/ref/plugins/
 
 RUN set -x && \
     /usr/local/bin/install-plugins.sh \
@@ -30,6 +29,9 @@ RUN set -x && \
         mailer $$all-plugins-list$$
 
 $$docker-copy-jpi$$
+
+COPY resolve-dependencies.sh /usr/local/bin/
+RUN /usr/local/bin/resolve-dependencies.sh $$built-plugins$$
 
 WORKDIR /var/jenkins_home
  
